Estilização do segundo container

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -33,12 +33,25 @@ body {
 .container .container1 p {
   color: hsla(0, 0%, 100%, 0.75);
   font-weight: 400;
-  padding: 20px 0px 0px 40px;
+  padding: 30px 0px 0px 40px;
 }
 .container .container2 {
   height: 100%;
   width: 300px;
   background-color: hsl(184, 100%, 22%);
+}
+.container .container2 img {
+  padding: 50px 0px 0px 40px;
+}
+.container .container2 h1 {
+  color: white;
+  font-weight: 700;
+  padding: 20px 0px 0px 40px;
+}
+.container .container2 p {
+  color: hsla(0, 0%, 100%, 0.75);
+  font-weight: 400;
+  padding: 30px 0px 0px 40px;
 }
 .container .container3 {
   height: 100%;
